--- a/presentation/sources.bib
+++ b/presentation/sources.bib
@@ -52,6 +52,12 @@
 	date = {2016-06-29},
 	url = {https://en.wikipedia.org/wiki/Water#/media/File:Water_droplet_blue_bg05.jpg},
 }
+@online{neurons,
+	author = {UC Regents Davis campus - http://brainmaps.org},
+	title = {Bild:Neuronen},
+	date = {2016-06-29},
+	url = {https://en.wikipedia.org/wiki/Neuron#/media/File:Smi32neuron.jpg},
+}
 @online{steam_eruption,
 	title = {Wassertropfen},
 	date = {2016-06-29},
