--- a/presentation/content/LatexPreamble.tex
+++ b/presentation/content/LatexPreamble.tex
@@ -31,7 +31,7 @@
 \usepackage[babel,german=quotes]{csquotes}
 
 %Einstellungen für Bibliographien mit "biber"                                                              
-\usepackage[backend=biber, style=numeric-verb,sorting=none]{biblatex}
+\usepackage[backend=biber,sorting=none]{biblatex}
 
 %%%%%%%%%%%%%%%%%%%% Seitenlayout %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
