--- a/presentation/presentation_consciousness_observer.tex
+++ b/presentation/presentation_consciousness_observer.tex
@@ -60,6 +60,11 @@
 	\section{Bewusstsein als Aggregatzustand}
 		\separatorslide
 		\input{contents/concsciousness_statematter}
+		\input{contents/perceptronium_properties}
+		\input{contents/integrated_information}
+		\input{contents/integration_problems}
+		
+		
 	
 	\section{Zusammenfassung}
 		\separatorslide
