--- a/presentation/sources.bib
+++ b/presentation/sources.bib
@@ -46,11 +46,17 @@
 	url={http://www.start-mediation.de/wp-content/uploads/2010/01/Vortrag_PMI.jpg}
 }
 
-@online{water_droplet,
+@online{pic_water_droplet,
 	author = {Fir0002/Flagstaffotos},
 	title = {Wassertropfen},
 	date = {2016-06-29},
 	url = {https://en.wikipedia.org/wiki/Water#/media/File:Water_droplet_blue_bg05.jpg},
+}
+@online{pic_stone,
+	author = {By EvanS},
+	title = {Bild: Felsen},
+	date = {2016-06-29},
+	url = {https://en.wikipedia.org/wiki/Rock_(geology)#/media/File:Balanced_Rock.jpg},
 }
 @online{neurons,
 	author = {UC Regents Davis campus - http://brainmaps.org},
@@ -58,10 +64,28 @@
 	date = {2016-06-29},
 	url = {https://en.wikipedia.org/wiki/Neuron#/media/File:Smi32neuron.jpg},
 }
-@online{steam_eruption,
-	title = {Wassertropfen},
+@online{microtubule,
+	title = {Bild:Mirkrotubuli},
 	date = {2016-06-29},
-	url = {https://en.wikipedia.org/wiki/Water#/media/File:Water_droplet_blue_bg05.jpg},
+	url = {https://de.wikipedia.org/wiki/Mikrotubulus#/media/File:FluorescentCells.jpg},
+}
+@online{microtubule_structure,
+	author={By Thomas Splettstoesser (www.scistyle.com)},
+	title = {Bild:Mirkrotubulus Struktur},
+	date = {2016-06-29},
+	url = {https://en.wikipedia.org/wiki/Microtubule#/media/File:Microtubule_structure.png},
+}
+@online{lightning_teslacoil,
+	author={By Daniel Grohmann},
+	title = {Bild:Entladung Tesla Spule},
+	date = {2016-06-29},
+	url = {https://en.wikipedia.org/wiki/Tesla_coil#/media/File:Tesla_coil_(discharge)..JPG},
+}
+@online{steam_eruption,
+	author={By Brocken Inaglory},
+	title = {Bild:Wasserdampf},
+	date = {2016-06-29},
+	url = {https://en.wikipedia.org/wiki/Steam#/media/File:Steam_phase_eruption_of_Castle_Geyser.jpg},
 }
 
 
@@ -73,15 +97,20 @@
 	url = {http://consc.net/papers/facing.html},
 	urldate = {2016-06-29},
 }
-
-@article{Chalmers_95,
-	author = {David Chalmers},
-	title = {Facing Up to the Problem of Consciousness},
-	journaltitle = {Journal of Consciousness Studies},
-	date = {1995},
-	url = {http://consc.net/papers/facing.html},
+@article{Tononi_08,
+	author = {Giulio Tononi},
+	title = {Consciousness as Integrated Information: a Provisional Manifesto},
+	journaltitle = {Biol. Bull.},
+	volume={215},
+	date = {2008},
+	url = {http://www.biolbull.org/content/215/3/216.full},
 	urldate = {2016-06-29},
 }
+
+
+
+
+
 @article{Tegmark_15_long,
 	author = {Max Tegmark},
 	title = {Consciousness as a State of Matter},
