first draft completed

--- a/presentation/presentation_consciousness_observer.tex
+++ b/presentation/presentation_consciousness_observer.tex
@@ -63,11 +63,20 @@
 		\input{contents/perceptronium_properties}
 		\input{contents/integrated_information}
 		\input{contents/integration_problems}
+		\input{contents/additional_properties}
+		\input{contents/independence}
+		\input{contents/integration_quantum_states}
+		\input{contents/integration_hamiltonian}
+		\input{contents/autonomy}
+		
+		
 		
 		
 	
 	\section{Zusammenfassung}
 		\separatorslide
+	\input{contents/summary}
+	
 	
 	\section*{Quellen}
 	\separatorslide
