--- a/presentation/sources.bib
+++ b/presentation/sources.bib
@@ -143,5 +143,13 @@
 	eprint = {quant-ph/9908084v3 },
 	year = {2000},
 }
+@article{Zurek_01,
+	author = {Wojciech H. Zurek},
+	title = {Information transfer in quantum measurements: irreversibility and amplification},
+	journal = {ArXiv e-prints},
+	archivePrefix = "arXiv",
+	eprint = {quant-ph/0111137},
+	year = {2001},
+}
 
 
