--- a/presentation/contents/problems_consciousness.tex
+++ b/presentation/contents/problems_consciousness.tex
@@ -2,7 +2,7 @@
 	\begin{itemize}
 		\item{im allgemeinen unbeachtet}
 		\begin{itemize}
-			\item{\Quote{ An other argument physics has been managed just fine for hundreds of years avoiding this subject and should therefore keep doing so.} - Max Tegmark\,\cite{Tegmark_15_long}}
+			\item{\Quote{ An other argument is that physics has been managed just fine for hundreds of years avoiding this subject and should therefore keep doing so.} - Max Tegmark\,\cite{Tegmark_15_long}}
 %			\item{\Quote{A commonly held view is that consciousness is irrelevant to physics and should therefore not be discussed in physics papers.}\\ - Max Tegmark\,\cite{Tegmark_15_long}}
 		\end{itemize}
 		\item{keine Lösung für das \emph{schwierige Problem}}
