--- a/presentation/contents/independence.tex
+++ b/presentation/contents/independence.tex
@@ -19,7 +19,7 @@
 				\begin{itemize}
 					\item{Bell-Paar (4): $\ket{\Psi} = \frac{1}{\sqrt{2}} \del{\ketup\!\ketup + \ketdown\!\ketdown}$  }
 					\begin{itemize}
-						\item{Reiner Zustand,\\ Trafo $\Rightarrow$ $\rho = \ketup\!\braup$}
+						\item{Reiner Zustand,\\ Trafo $\Rightarrow$ $\rho = \ketup\ketup\!\braup\braup$}
 						\item{separabel $\Rightarrow \Phi = 0$}
 					\end{itemize}
 					\item{maximale Verschränkung, keine Integrierte Information}
