--- a/presentation/contents/integrated_information.tex
+++ b/presentation/contents/integrated_information.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Integrierte Information}
 		\begin{columns}
-			\alt<1,2,3>{\begin{column}{0.55\textwidth}
+			\alt<1,2>{\begin{column}{0.55\textwidth}
 				\begin{itemize}
 					\item{Betrachtbar als Speicherung von Information,
 						mit Fehlerkorrektur-Mechanismus}
@@ -15,10 +15,9 @@
 				\centering
 				\alt<1>{\includegraphics[scale=0.14]{graphics/qrcode_whole.jpg}}{}
 				\alt<2>{\includegraphics[scale=0.14]{graphics/qrcode_damaged.jpg}}{}
-				\alt<3>{\includegraphics[scale=0.13]{graphics/integrated_information_graph.jpg}\cite{Tegmark_15_long}}{}
 			\end{column}}{}
-			
-		\alt<4>{\begin{column}{0.55\textwidth}
+
+		\alt<3>{\begin{column}{0.55\textwidth}
 				\begin{itemize}
 					\item{Physikalische Systeme}
 					\begin{itemize}
@@ -39,4 +38,6 @@
 				\includegraphics[scale=0.18]{graphics/egg_crate_potentials.jpg}\,\cite{Tegmark_15_long}
 			\end{column}}{}	
 		\end{columns}
+			\centering
+			\alt<1,2>{\includegraphics[scale=0.16]{graphics/integrated_information_graph.jpg}\cite{Tegmark_15_long}}{}
 \end{frame}
