--- a/presentation/contents/integration_hamiltonian.tex
+++ b/presentation/contents/integration_hamiltonian.tex
@@ -25,9 +25,21 @@
 					WW-Hamiltonoperator\,\cite{Zurek_01}}
 			\end{itemize}
 		\end{itemize}}{}
-		\alt<2,3>{\begin{itemize}
-				\item{Dekohärenz treibt System $H_1$ mit $\comm{H_1}{H_3} = 0$ in einen zeitunabhängigen Zustand}
-				\end{itemize}}{}
+				\alt<3>{\begin{columns}
+					\begin{column}{.55\textwidth}
+					\begin{itemize}
+					\item{Dekohärenz treibt System $H_1$ mit $\comm{H_1}{H_3} = 0$ in einen zeitunabhängigen Zustand}
+					\begin{itemize}
+						\item{Reiner Zustand $\longrightarrow$ vollständig gemischter Zustand}
+					\end{itemize}
+					\end{itemize}	
+					\end{column}
+					\begin{column}{.45\textwidth}
+						\centering
+						\includegraphics[scale=0.25]{graphics/blochsphere_independance.jpg}
+					\end{column}
+				\end{columns}}{}
+				
 		\alt<3>{\begin{beamerboxesrounded}{Unabhängigkeits-Paradoxon}
 				Zerlegt man das Universum in maximal unabhängige Objekte,
 				kommt jegliche Veränderung zum erliegen.
