--- a/presentation/presentation_consciousness_observer.tex
+++ b/presentation/presentation_consciousness_observer.tex
@@ -82,6 +82,7 @@
 	\separatorslide
 	
 	%\nocite{GRS,INES_Manual,bmud,BFS,kernenergieDE,wikiRS}
+	\nocite{Zeh_00}
 	\begin{frame}[allowframebreaks]{Quellen}
 		\printbibliography
 	\end{frame}
