--- a/presentation/styles/beamerthemevertex.sty
+++ b/presentation/styles/beamerthemevertex.sty
@@ -32,8 +32,8 @@
 %\definecolor{vertexLightGrey}{rgb}{0.833333333,0.8117647064,0.790196078}
 %\definecolor{vertexLightGrey}{rgb}{0.833333333,0.8117647064,0.790196078}
 \definecolor{vertexDarkGray}{rgb}{0.3019607844,0.2803921571,0.258823530} % dark gray text color
-\definecolor{vertexDarkGrey}{rgb}{0.2823529411764706, 0.4117647058823529, 0.08235294117647059} % Dark green
-\definecolor{vertexLightGrey}{rgb}{0.5019607843137255, 0.7294117647058823, 0.14901960784313725} % TU (light) green
+\definecolor{vertexDarkGrey}{rgb}{0.34117647,  0.49411765,  0.10196078}%{0.2823529411764706, 0.4117647058823529, 0.08235294117647059} % Dark green
+\definecolor{vertexLightGrey}{rgb}{0.57254902,  0.82745098,  0.16862745}%{0.5019607843137255, 0.7294117647058823, 0.14901960784313725} % TU (light) green
 %\definecolor{vertexDarkGrey}{HTML}{1FAE0A}
 %\definecolor{vertexLightGrey}{rgb}{0.833333333,0.8117647064,0.790196078}
 \setbeamercolor{normal text}{fg=vertexDarkGray}
