--- a/presentation/contents/autonomy.tex
+++ b/presentation/contents/autonomy.tex
@@ -26,7 +26,7 @@
 		\end{column}
 		\begin{column}{0.3\textwidth}
 			\centering
-			\includegraphics[scale=.3]{graphics/autonomy_simple.jpg}
+			\includegraphics[scale=.3]{graphics/autonomy_simple.jpg}\,\cite{Tegmark_15_long}
 		\end{column}
 	\end{columns}
 	\begin{itemize}
