--- a/presentation/contents/integration_hamiltonian.tex
+++ b/presentation/contents/integration_hamiltonian.tex
@@ -36,7 +36,7 @@
 					\end{column}
 					\begin{column}{.45\textwidth}
 						\centering
-						\includegraphics[scale=0.25]{graphics/blochsphere_independance.jpg}
+						\includegraphics[scale=0.25]{graphics/blochsphere_independance.jpg}\,\cite{Tegmark_15_long}
 					\end{column}
 				\end{columns}}{}
 				
