--- a/presentation/sources.bib
+++ b/presentation/sources.bib
@@ -24,7 +24,7 @@
 	url={http://www.duden.de/rechtschreibung/Beobachter}
 }
 @online{pic_sandstone,
-	title = {Sandstein},
+	title = {Bild:Sandstein},
 	date = {2016-06-29},
 	url={https://en.wikipedia.org/wiki/Rock_(geology)#/media/File:SandstoneUSGOV.jpg}
 }
@@ -48,7 +48,7 @@
 
 @online{pic_water_droplet,
 	author = {Fir0002/Flagstaffotos},
-	title = {Wassertropfen},
+	title = {Bild:Wassertropfen},
 	date = {2016-06-29},
 	url = {https://en.wikipedia.org/wiki/Water#/media/File:Water_droplet_blue_bg05.jpg},
 }
