--- a/presentation/contents/problems_observer.tex
+++ b/presentation/contents/problems_observer.tex
@@ -8,7 +8,7 @@
 		\end{itemize}
 		\item{Quantenmechanik:}
 		\begin{itemize}
-			\item{Einfluss: Kollaps/Branching der Wellenfunktion}
+			\item{Einfluss: Kollaps der Wellenfunktion?}
 		\end{itemize}
 		\item{\Quote{The only issue there is consensus on is that there is no
 				consensus about how to define an observer and its role.}\\ - Max Tegmark\,\cite{Tegmark_15_long}}
