--- a/presentation/presentation_consciousness_observer.tex
+++ b/presentation/presentation_consciousness_observer.tex
@@ -67,7 +67,7 @@
 		\input{contents/independence}
 		\input{contents/integration_quantum_states}
 		\input{contents/integration_hamiltonian}
-		\input{contents/autonomy}
+		%\input{contents/autonomy}
 		
 		
 		
@@ -77,6 +77,9 @@
 		\separatorslide
 	\input{contents/summary}
 	
+	\section*{Backup}
+	\separatorslide	
+	\input{contents/backup_autonomy}
 	
 	\section*{Quellen}
 	\separatorslide
