--- a/presentation/contents/integrated_information.tex
+++ b/presentation/contents/integrated_information.tex
@@ -14,7 +14,7 @@
 			\begin{column}{0.5\textwidth}
 				\centering
 				\alt<1>{\includegraphics[scale=0.14]{graphics/qrcode_whole.jpg}}{}
-				\alt<2>{\includegraphics[scale=0.14]{graphics/qrcode_damaged.jpg}}{}
+				\alt<2>{\hspace{-0.08cm}\includegraphics[scale=0.14]{graphics/qrcode_damaged.jpg}}{}
 			\end{column}}{}
 
 		\alt<3>{\begin{column}{0.55\textwidth}
