--- a/presentation/contents/perceptronium_properties.tex
+++ b/presentation/contents/perceptronium_properties.tex
@@ -1,4 +1,4 @@
-\begin{frame}{Eigenschaften von Perceptronium}
+\begin{frame}{Integrierte Information}
 	\begin{itemize}
 		\item{Aktive Forschung z.B. in der Neurowissenschaft}
 		\begin{itemize}
