--- a/presentation/contents/summary.tex
+++ b/presentation/contents/summary.tex
@@ -15,7 +15,7 @@
 					\begin{itemize}
 						\item{klassische Beschreibung notwendig}
 					\end{itemize}
-		\item{Integrierte Information und Autonomie notwendige Eigenschaften von
+		\item{Integrierte Information und Unabhängigkeit notwendige Eigenschaften von
 			  bewusster Materie}
 	\end{itemize}
 \end{frame}
