--- a/presentation/contents/superposition_neuron.tex
+++ b/presentation/contents/superposition_neuron.tex
@@ -39,7 +39,7 @@
 			\includegraphics[scale=0.18]{graphics/neuron_schematic.jpg}\\\hfill\cite{Tegmark_99}
 		\end{column}}{}
 	\end{columns}	
-	\begin{itemize}
+	\alt<2>{\begin{itemize}
 		\item[$\Rightarrow$]{Räumliche Superposition von \num{e6} Na$^{+}$-Ionen, mit Abstand  $\sim\mathcal{O}(\SI{10}{nm})$}
-	\end{itemize}
+	\end{itemize}}{}
 \end{frame}
