--- a/presentation/presentation_consciousness_observer.tex
+++ b/presentation/presentation_consciousness_observer.tex
@@ -47,9 +47,10 @@
 	\section{Beobachter als Teilsystem}
 		\separatorslide
 		\input{contents/subsystems}
+		\input{contents/implications}
 		\input{contents/exsample_object}
 		\input{contents/exsample_subject}
-		\input{contents/implications}
+		
 		
 		
 	\section{Dekohärenz von Gehirnprozessen}
@@ -60,10 +61,13 @@
 	\section{Bewusstsein als Aggregatzustand}
 		\separatorslide
 		\input{contents/concsciousness_statematter}
+		\input{contents/additional_properties}
 		\input{contents/perceptronium_properties}
 		\input{contents/integrated_information}
 		\input{contents/integration_problems}
-		\input{contents/additional_properties}
+%		\subsection{Unabhängigkeit}
+%		\separatorslide
+		\input{contents/properties}
 		\input{contents/independence}
 		\input{contents/integration_quantum_states}
 		\input{contents/integration_hamiltonian}
