--- a/presentation/contents/exsample_subject.tex
+++ b/presentation/contents/exsample_subject.tex
@@ -2,7 +2,7 @@
 	\alt<1,2>{\begin{itemize}
 		\item{Zeitentwicklung von S}
 		\begin{itemize}
-			\item{$U = \exp(-i \int\!\!\!H_{\mathrm{OS}}\dif t)$, spontane Entscheidung}
+			\item{$U = \exp(-i \int\!\!\!H_{\mathrm{OS}}\dif t)$, Zeit kurz}
 			\item{$U\ketneutrey = \frac{1}{\sqrt{2}}\del{\ketsmiley + \ketfrowny}$, $\rho_{\mathrm{S}} = \ketneutrey\braneutrey$}
 		\end{itemize}
 	\end{itemize}
