--- a/presentation/contents/summary.tex
+++ b/presentation/contents/summary.tex
@@ -4,8 +4,7 @@
 			  Beschäftigung mit dem Bewusstsein}
 		\item{In der Physik nicht anders, schon Beobachter unklar}
 			\begin{itemize}
-				\item{Schon allgemein Einbeziehung des Bewusstsein notwendig;
-					  Many-Minds-Interpretation}
+				\item{Einbeziehung des Bewusstsein notwendig?}
 			\end{itemize}
 		\item{Beobachter als Teilsystem betrachtet}
 			\begin{itemize}
