--- a/presentation/contents/what_is_observer.tex
+++ b/presentation/contents/what_is_observer.tex
@@ -1,7 +1,7 @@
 \begin{frame}{Beobachter}
 	\begin{itemize}
 		   \item{Duden: \Quote{jemand, der etwas oder jemanden beobachtet}\,\cite{duden_observer}}
-		   \item{Allgemein: Objektiv, einfach zu verstehen; Passivität}
+		   \item{Allgemein: Objektiv, einfach zu verstehen}
 	\end{itemize}
 	\vspace{.5cm}
 	\begin{columns}
