--- a/paper/content/decoherence_brain.tex
+++ b/paper/content/decoherence_brain.tex
@@ -1,1 +1,28 @@
 % !TeX root = ../paper_observer_consciousness.tex
+
+Ein Gehirnprozess in dem quantenmechanische Superpositionen denkbar sind
+die Aktivität von Neuronen, den Grundbausteinen der Informationsverarbeitung im 
+Gehirn. Das komplexe Netzwerk aus $\sim \num{e11}$ Neuronen kann auch durch
+Forschungsergebnisse anderer Wissenschaften mit dem Bewusstsein in Zusammenhang
+gebracht werden. 
+
+Eine schematische Darstellung einer Nervenzelle ist in \cref{fig:neuron} gezeigt.
+Auf das, für diese Betrachtung, Notwendigste reduziert stellen Neuronen im Prinzip
+ein System mit zwei möglichen Zuständen dar, die feuern (aktiv) und 
+nicht-feuern (passiv) genannt werden. Der Zustand ist dabei von der Konzentration
+von Na$^{+}$-Ionen im Inneren der Nervenzelle abhängig, bei hohen Konzentrationen
+feuert die Nervenzelle bei niedrigen nicht. Eine Superposition zwischen einer 
+feuernden und nicht-feuernden Nervenzelle lässt sich demnach vereinfacht als räumliche 
+Superposition von Na$^{+}$-Ionen annehmen. Die räumliche Trennung dieser beiden Orte 
+ist dabei von der Größenordnung der Zellwände $h \sim \SI{10}{\nano\meter}$.
+
+Um nun Aussagen über die Dekohärenz-Zeitskalen machen zu können muss zunächst 
+die Anzahl der Ionen bestimmt werden, die sich gleichzeitig in Superposition befinden.
+Diese Anzahl wird über eine einfache Abschätzung der Ladungsverteilung in der Nervenzelle
+ermittelt. Im feuernden Zustand beträgt die Potentialdifferenz zwischen dem Inneren und Äußeren
+der Zelle $U_1 \sim \SI{0.03}{\volt}$ während diese im nicht-feuernden Zustand $U_0 \sim \SI{-0.07}{\volt}$
+beträgt. Die Anzahl $N$ der Na$^{+}$-Ionen ergibt sich damit und realistischen Abschätzungen für 
+die Ausmaße einer Nervenzelle zu 
+\begin{empheq}{equation}
+		N = \frac{\pi dLf\epsilon_{0}}{qh}\del{U_{1} -U_{0}}
+\end{empheq}
