--- a/paper/content/observer_subsystem.tex
+++ b/paper/content/observer_subsystem.tex
@@ -71,6 +71,7 @@ Analog wirken die interne Dynamik des Subjekts $H_{\mathrm{S}}$  und die Wechsel
 Umgebung $H_{\mathrm{SE}}$ , wodurch zunächst Superpositionen erzeugt und durch Dekohärenz wieder unterdrückt werden.
 Aus dem System des neutralen Beobachters $\rho_{\mathrm{S}} = \ketneutrey\braneutrey$ ergibt sich durch Zeitentwicklung $U$
 \begin{empheq}{equation}
+\label{eq:example_Hs}
 U\rho_{\mathrm{S}}U^{\dagger} =\frac{1}{2}\del{\ketsmiley\brasmiley + \ketsmiley\brafrowny + \ketfrowny\brasmiley + \ketfrowny\brafrowny}.
 \end{empheq}
 Und nach Wirkung der  Dekohärenz
