--- a/paper/paper_observer_consciousness.tex
+++ b/paper/paper_observer_consciousness.tex
@@ -16,8 +16,8 @@
 		\input{content/integration}
 		\subsection{Unabhängigkeit}
 		\input{content/independence}
-		\subsection{Dynamik und Autonomie}
-		\input{content/dynamic_autonomy}
+		%\subsection{Dynamik und Autonomie}
+		%\input{content/dynamic_autonomy}
 	\section{Schlussbetrachtung}
 	\input{content/conclusion}
 	
